--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "browser-sync": "^2.23.6",
     "gulp": "^3.9.1",
+    "gulp-minify": "^2.1.0",
     "gulp-sass": "^3.1.0"
   }
 }
