--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "url": "https://github.com/WhiteHatForHire/whitehatwebdev.com/issues"
   },
   "homepage": "https://github.com/WhiteHatForHire/whitehatwebdev.com#readme",
-  "dependencies": {},
+  "dependencies": {
+    "gulp-htmlmin": "^4.0.0"
+  },
   "devDependencies": {
     "browser-sync": "^2.23.6",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.9.2",
     "gulp-minify": "^2.1.0",
     "gulp-sass": "^3.1.0"
   }
